# RepoForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  quicksort.py  readme_my.md  repoforge0.2026-07-08.private-key.pem  smoke_test.py  test-webhook.md  test_review_target.py
.claude/: settings.local.json
agent/: checkpoint.py  core.py  pipeline.py  prompt.py  structured_output.py  sub_agent.py  task.py
benchmark/: __init__.py  cli.py  measure_metrics.py  offline_metrics.py  swe_bench.py
benchmark_results/: measurement_report.json  measurement_report.md  offline_metrics.json  predictions_20260708_184109.jsonl  progress.json  report_20260708_184109.json
config/: default.yaml  schema.py
context/: compressor.py
docs/: design__repo_memory_and_agent_orchestration.md  interview_prep__technical_deep_dive.md
entry/: cli.py
llm/: base.py
memory/: __init__.py  repo_memory.py
pipeline/: __init__.py  auth.py  auto_merge.py  cli.py  dashboard.py  event_registry.py  handlers.py  metrics.py  release_notes.py  review.py  review_memory.py  scheduler.py  scout.py  security.py  server.py  stale_manager.py  triage.py  welcome.py
tools/: base.py  runtime.py
