[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repoforge"
version = "0.1.0"
description = "A general-purpose coding agent supporting Claude, OpenAI, DeepSeek, Groq and Ollama"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "PyGithub>=2.3.0",
    "gitpython>=3.1.0",
    "flask>=3.0.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
full = [
    "tiktoken>=0.7.0",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    "tree-sitter-go>=0.22.0",
    "tree-sitter-rust>=0.22.0",
    "tree-sitter-java>=0.22.0",
]

[project.scripts]
repoforge = "entry.cli:main"
repoforge-bench = "benchmark.cli:main"
repoforge-pipe = "pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "llm*", "tools*", "context*", "entry*", "config*", "benchmark*", "pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agent", "llm", "tools", "context", "entry"]
omit = ["tests/*"]